cartopy/docs/v0.21/_sources/gallery/lines_and_polygons/tissot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_and_polygons/tissot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_and_polygons_tissot.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_and_polygons_tissot.py:


Tissot's Indicatrix
-------------------

Visualize Tissot's indicatrix on a map.

.. GENERATED FROM PYTHON SOURCE LINES 8-31



.. image-sg:: /gallery/lines_and_polygons/images/sphx_glr_tissot_001.png
   :alt: tissot
   :srcset: /gallery/lines_and_polygons/images/sphx_glr_tissot_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())

        # make the map global rather than have it zoom in to
        # the extents of any plotted data
        ax.set_global()

        ax.stock_img()
        ax.coastlines()

        ax.tissot(facecolor='orange', alpha=0.4)

        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.601 seconds)


.. _sphx_glr_download_gallery_lines_and_polygons_tissot.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: tissot.py <tissot.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: tissot.ipynb <tissot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
